--- a/client/v2/index.html
+++ b/client/v2/index.html
@@ -55,13 +55,13 @@ https://templatemo.com/tm-563-seo-dream
           <nav class="main-nav">
             <!-- ***** Logo Start ***** -->
             <a href="index.html" class="logo">
-              <h4>SEO Dream <img src="assets/images/logo-icon.png" alt=""></h4>
+              <h4>Suny New Paltz Childern's Center <img src="https://th.bing.com/th/id/OIP.GBRVs4KRcohoflQO4-_CbQHaCE?pid=ImgDet&rs=1" alt=""></h4>
             </a>
             <!-- ***** Logo End ***** -->
             <!-- ***** Menu Start ***** -->
             <ul class="nav">
               <li class="scroll-to-section"><a href="#top" class="active">Home</a></li>
-              <li class="scroll-to-section"><a href="#features">Features</a></li>
+              <li class="scroll-to-section"><a href="#features">Fourms</a></li>
               <li class="scroll-to-section"><a href="#about">About Us</a></li>
               <li class="scroll-to-section"><a href="#services">Services</a></li>
               <li class="scroll-to-section"><a href="#portfolio">Portfolio</a></li>
@@ -89,14 +89,14 @@ https://templatemo.com/tm-563-seo-dream
                 <div class="row">
                   <div class="col-lg-4 col-sm-4">
                     <div class="info-stat">
-                      <h6>Agency Status:</h6>
-                      <h4>Ready Work</h4>
+                      <h6>HOURS OF OPERATION:</h6>
+                      <h4>Monday through Friday, 7:30 a.m. - 5 p.m.</h4>
                     </div>
                   </div>
                   <div class="col-lg-4 col-sm-4">
                     <div class="info-stat">
-                      <h6>Price:</h6>
-                      <h4>$720/Month</h4>
+                      <h6>AGE OF CHILDREN:</h6>
+                      <h4>2-5 years of age </h4>
                     </div>
                   </div>
                   <div class="col-lg-4 col-sm-4">
@@ -106,11 +106,11 @@ https://templatemo.com/tm-563-seo-dream
                     </div>
                   </div>
                   <div class="col-lg-12">
-                    <h2>SEO &amp; Digital Marketing Agency</h2>
+                    <h2>SUNY NEW PALTZ &amp; CHILDERN'S CENTER</h2>
                   </div>
                   <div class="col-lg-12">
                     <div class="main-green-button scroll-to-section">
-                      <a href="#contact">Get Your Quote</a>
+                      <a href="#contact">Sign Up today</a>
                     </div>
                   </div>
                 </div>
@@ -118,7 +118,7 @@ https://templatemo.com/tm-563-seo-dream
             </div>
             <div class="col-lg-6">
               <div class="right-image wow fadeInRight" data-wow-duration="1s" data-wow-delay="0.5s">
-                <img src="assets/images/banner-right-image.png" alt="">
+                <img src="https://webstockreview.net/images/friendship-clipart-we-are-friend-12.png" alt="">
               </div>
             </div>
           </div>
@@ -267,13 +267,13 @@ https://templatemo.com/tm-563-seo-dream
       <div class="row">
         <div class="col-lg-6">
           <div class="left-image wow fadeInLeft" data-wow-duration="1s" data-wow-delay="0.5s">
-            <img src="assets/images/about-left-image.png" alt="">
+            <img src="https://th.bing.com/th/id/OIP.gb0PpJ4Ntv59MZsY-79qZwHaD4?pid=ImgDet&rs=1" alt="">
           </div>
         </div>
         <div class="col-lg-6 align-self-center wow fadeInRight" data-wow-duration="1s" data-wow-delay="0.5s">
           <div class="section-heading">
             <h6>About Us</h6>
-            <h2>Top <em>marketing</em> agency &amp; consult your website <span>with us</span></h2>
+            <h2>A little about us!</h2>
           </div>
           <div class="row">
             <div class="col-lg-4 col-sm-4">
@@ -295,7 +295,7 @@ https://templatemo.com/tm-563-seo-dream
               </div>
             </div>
           </div>
-          <p><a rel="nofollow" href="https://templatemo.com/tm-563-seo-dream" target="_parent">SEO Dream</a> is free digital marketing CSS template provided by TemplateMo website. You are allowed to use this template for your business websites. Please DO NOT redistribute this template ZIP file on any Free CSS collection websites. You may contact us for more information. Thank you.</p>
+          <p><a rel="nofollow" href="https://templatemo.com/tm-563-seo-dream" target="_parent">The Children's Center</a> is a licensed, non-profit corporation. In addition to tuition, the center is partially funded by SUNY grants and by the Student Association of SUNY New Paltz. The facility, plus maintenance and utilities, is provided by the College free of charge. We appreciate the upkeep and maintenance the College provides. Our primary purpose is to provide quality care for children of students attending classes at SUNY New Paltz.</p>
           <div class="main-green-button"><a href="#">Discover company</a></div>
         </div>
       </div>
