Added a readme, added lastName for form

--- a/client/v0/index.html
+++ b/client/v0/index.html
@@ -31,8 +31,8 @@
             </p>
 
             <p>
-                <label for="firstName">First Name:</label>
-                <input type="text" name="first_name" id="firstName">
+                <label for="lastName">Last Name:</label>
+                <input type="text" name="last_name" id="lastName">
             </p>
     
             
