--- a/client/v0/index.html
+++ b/client/v0/index.html
@@ -15,9 +15,9 @@
 
         <nav id="navigation" class="navbar"> 
             <a href="/v0/p/s23-04/" onclick="route()"><span>Home</span></a>
-            <a href="/v0/p/s23-04/v0/info" onclick="route()"><span>About</span></a>
-            <a href="/v0/p/s23-04/v0/calendar" onclick="route()"><span>Calendar</span></a>
-            <a href="/v0/p/s23-04/v0/contact" onclick="route()"><span>Contact</span></a>
+            <a href="/v0/p/s23-04/info" onclick="route()"><span>About</span></a>
+            <a href="/v0/p/s23-04/calendar" onclick="route()"><span>Calendar</span></a>
+            <a href="/v0/p/s23-04/contact" onclick="route()"><span>Contact</span></a>
         </nav>
 
     </section>
