--- a/client/v2/index.html
+++ b/client/v2/index.html
@@ -63,7 +63,7 @@ https://templatemo.com/tm-563-seo-dream
               <li class="scroll-to-section"><a href="#top" class="active">Home</a></li>
               <li class="scroll-to-section"><a href="#features">Fourms</a></li>
               <li class="scroll-to-section"><a href="#about">About Us</a></li>
-              <li class="scroll-to-section"><a href="#services">Services</a></li>
+              <li class="scroll-to-section"><a href="#services">Staff</a></li>
               <li class="scroll-to-section"><a href="#portfolio">Portfolio</a></li>
               <li class="scroll-to-section"><a href="#contact">Contact Us</a></li> 
               <li class="scroll-to-section"><div class="main-blue-button"><a href="#contact">Get Your Quote</a></div></li> 
@@ -307,7 +307,7 @@ https://templatemo.com/tm-563-seo-dream
       <div class="row">
         <div class="col-lg-6 offset-lg-3">
           <div class="section-heading wow bounceIn" data-wow-duration="1s" data-wow-delay="0.2s">
-            <h6>Our Services</h6>
+            <h6>Our Staff</h6>
             <h2>Discover What We Do &amp; <span>Offer</span> To Our <em>Clients</em></h2>
           </div>
         </div>
@@ -320,13 +320,14 @@ https://templatemo.com/tm-563-seo-dream
             <div class="row">
               <div class="col-lg-4">
                 <div class="icon">
-                  <img src="assets/images/service-icon-01.png" alt="">
+                  <img src="/client/icon.jpg" alt="">
                 </div>
               </div>
               <div class="col-lg-8">
                 <div class="right-content">
-                  <h4>Similar Websites</h4>
-                  <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium dormque laudantium.</p>
+                  <h4>Director of Children's Center of New Paltz</h4>
+                  <p>Name:</p> <br>
+                  <p>Graduated from SUNY New Paltz, has been the director of the New Paltz Children Center for Xyrs. Hobbies include x,y,z</p>
                 </div>
               </div>
             </div>
@@ -337,13 +338,14 @@ https://templatemo.com/tm-563-seo-dream
             <div class="row">
               <div class="col-lg-4">
                 <div class="icon">
-                  <img src="assets/images/service-icon-02.png" alt="">
+                  <img src="/client/icon.jpg" alt="">
                 </div>
               </div>
               <div class="col-lg-8">
                 <div class="right-content">
-                  <h4>Website Trends</h4>
-                  <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium dormque laudantium.</p>
+                  <h4>Child Center Staff</h4>
+                  <p>Name:</p><br>
+                  <p>Graduated from SUNY New Paltz, has been working for the New Paltz Children Center for Xyrs. Hobbies include x,y,z</p>
                 </div>
               </div>
             </div>
@@ -354,13 +356,14 @@ https://templatemo.com/tm-563-seo-dream
             <div class="row">
               <div class="col-lg-4">
                 <div class="icon">
-                  <img src="assets/images/service-icon-03.png" alt="">
+                  <img src="/client/icon.jpg" alt="">
                 </div>
               </div>
               <div class="col-lg-8">
                 <div class="right-content">
-                  <h4>Traffic Analysis</h4>
-                  <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium dormque laudantium.</p>
+                  <h4>Child Center Staff</h4>
+                  <p>Name:</p><br>
+                  <p>Graduated from SUNY New Paltz, has been working for the New Paltz Children Center for Xyrs. Hobbies include x,y,z</p>
                 </div>
               </div>
             </div>
@@ -371,13 +374,14 @@ https://templatemo.com/tm-563-seo-dream
             <div class="row">
               <div class="col-lg-4">
                 <div class="icon">
-                  <img src="assets/images/service-icon-03.png" alt="">
+                  <img src="/client/icon.jpg" alt="">
                 </div>
               </div>
               <div class="col-lg-8">
                 <div class="right-content">
-                  <h4>Optimizing Keywords</h4>
-                  <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium dormque laudantium.</p>
+                  <h4>Child Center Staff</h4>
+                  <p>Name:</p><br>
+                  <p>Graduated from SUNY New Paltz, has been working for the New Paltz Children Center for Xyrs. Hobbies include x,y,z</p>
                 </div>
               </div>
             </div>
@@ -388,13 +392,14 @@ https://templatemo.com/tm-563-seo-dream
             <div class="row">
               <div class="col-lg-4">
                 <div class="icon">
-                  <img src="assets/images/service-icon-01.png" alt="">
+                  <img src="/client/icon.jpg" alt="">
                 </div>
               </div>
               <div class="col-lg-8">
                 <div class="right-content">
-                  <h4>Page Optimizations</h4>
-                  <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium dormque laudantium.</p>
+                  <h4>Child Center Staff</h4>
+                  <p>Name:</p><br>
+                  <p>Graduated from SUNY New Paltz, has been working for the New Paltz Children Center for Xyrs. Hobbies include x,y,z</p>
                 </div>
               </div>
             </div>
@@ -405,13 +410,14 @@ https://templatemo.com/tm-563-seo-dream
             <div class="row">
               <div class="col-lg-4">
                 <div class="icon">
-                  <img src="assets/images/service-icon-02.png" alt="">
+                  <img src="client/icon.jpg" alt="">
                 </div>
               </div>
               <div class="col-lg-8">
                 <div class="right-content">
-                  <h4>Deep URL Analysis</h4>
-                  <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium dormque laudantium.</p>
+                  <h4>Child Center Staff</h4>
+                  <p>Name:</p><br>
+                  <p>Graduated from SUNY New Paltz, has been working for the New Paltz Children Center for Xyrs. Hobbies include x,y,z</p>
                 </div>
               </div>
             </div>
@@ -597,13 +603,14 @@ https://templatemo.com/tm-563-seo-dream
                       <div class="icon">
                         <img src="assets/images/contact-icon-02.png" alt="phone">
                       </div>
-                      <a href="#">+001-002-0034</a>
+                      <a href="#">845-257-2910</a>
                     </li>
                     <li>
                       <div class="icon">
                         <img src="assets/images/contact-icon-03.png" alt="location">
                       </div>
-                      <a href="#">26th Street, Digital Villa</a>
+                      <a href="#">1 Hawk Drive 
+                        New Paltz, NY 12561 </a>
                     </li>
                   </ul>
                 </div>
