change on index form

--- a/client/v2/index.html
+++ b/client/v2/index.html
@@ -432,8 +432,8 @@ https://templatemo.com/tm-563-seo-dream
       <div class="row">
         <div class="col-lg-5">
           <div class="section-heading wow fadeInLeft" data-wow-duration="1s" data-wow-delay="0.3s">
-            <h6>Our Portofolio</h6>
-            <h2>Discover Our Recent <em>Projects</em> And <span>Showcases</span></h2>
+            <h6>Testimonials</h6>
+            <h2>What parents have to  <em> say </em> about <span>us!</span></h2>
           </div>
         </div>
       </div>
@@ -448,8 +448,8 @@ https://templatemo.com/tm-563-seo-dream
                   <img src="assets/images/portfolio-01.jpg" alt="">
                   <div class="hover-content">
                     <div class="inner-content">
-                      <a href="#"><h4>Awesome Project 101</h4></a>
-                      <span>Marketing</span>
+                      <a href="#"><h4>ex:</h4></a>
+                      <span>"Great environment for my 3yr old"</span>
                     </div>
                   </div>
                 </div>
@@ -459,8 +459,8 @@ https://templatemo.com/tm-563-seo-dream
                   <img src="assets/images/portfolio-04.jpg" alt="">
                   <div class="hover-content">
                     <div class="inner-content">
-                      <a href="#"><h4>Awesome Project 102</h4></a>
-                      <span>Branding</span>
+                      <a href="#"><h4>ex:</h4></a>
+                      <span>"convenient"</span>
                     </div>
                   </div>
                 </div>
@@ -472,8 +472,8 @@ https://templatemo.com/tm-563-seo-dream
                   <img src="assets/images/portfolio-02.jpg" alt="">
                   <div class="hover-content">
                     <div class="inner-content">
-                      <a href="#"><h4>Awesome Project 103</h4></a>
-                      <span>Consulting</span>
+                      <a href="#"><h4>ex:</h4></a>
+                      <span>"We are so thankful to be part of this center"</span>
                     </div>
                   </div>
                 </div>
@@ -483,8 +483,8 @@ https://templatemo.com/tm-563-seo-dream
                   <img src="assets/images/portfolio-05.jpg" alt="">
                   <div class="hover-content">
                     <div class="inner-content">
-                      <a href="#"><h4>Awesome Project 104</h4></a>
-                      <span>Artwork</span>
+                      <a href="#"><h4>ex:</h4></a>
+                      <span>The staff is very nice and caring!</span>
                     </div>
                   </div>
                 </div>
@@ -496,8 +496,8 @@ https://templatemo.com/tm-563-seo-dream
                   <img src="assets/images/portfolio-03.jpg" alt="">
                   <div class="hover-content">
                     <div class="inner-content">
-                      <a href="#"><h4>Awesome Project 105</h4></a>
-                      <span>Branding</span>
+                      <a href="#"><h4>ex:</h4></a>
+                      <span>A very safe and supporting place for my child</span>
                     </div>
                   </div>
                 </div>
@@ -507,8 +507,8 @@ https://templatemo.com/tm-563-seo-dream
                   <img src="assets/images/portfolio-06.jpg" alt="">
                   <div class="hover-content">
                     <div class="inner-content">
-                      <a href="#"><h4>Awesome Project 106</h4></a>
-                      <span>Artwork</span>
+                      <a href="#"><h4>ex:</h4></a>
+                      <span></span>
                     </div>
                   </div>
                 </div>
@@ -520,8 +520,8 @@ https://templatemo.com/tm-563-seo-dream
                   <img src="assets/images/portfolio-04.jpg" alt="">
                   <div class="hover-content">
                     <div class="inner-content">
-                      <a href="#"><h4>Awesome Project 107</h4></a>
-                      <span>Creative</span>
+                      <a href="#"><h4>ex:</h4></a>
+                      <span></span>
                     </div>
                   </div>
                 </div>
@@ -531,8 +531,8 @@ https://templatemo.com/tm-563-seo-dream
                   <img src="assets/images/portfolio-01.jpg" alt="">
                   <div class="hover-content">
                     <div class="inner-content">
-                      <a href="#"><h4>Awesome Project 108</h4></a>
-                      <span>Consulting</span>
+                      <a href="#"><h4>ex:</h4></a>
+                      <span></span>
                     </div>
                   </div>
                 </div>
