--- a/client/v2/index.html
+++ b/client/v2/index.html
@@ -11,7 +11,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700;800&display=swap" rel="stylesheet">
 
-    <title>SEO Dream - Creative SEO HTML5 Template by TemplateMo</title>
+    <title>Suny New Paltz Childern's Center</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -64,8 +64,10 @@ https://templatemo.com/tm-563-seo-dream
               <li class="scroll-to-section"><a href="#features">Fourms</a></li>
               <li class="scroll-to-section"><a href="#about">About Us</a></li>
               <li class="scroll-to-section"><a href="#services">Staff</a></li>
-              <li class="scroll-to-section"><a href="#portfolio">Portfolio</a></li>
+              <li class="scroll-to-section"><a href="#portfolio">Gallery</a></li>
               <li class="scroll-to-section"><a href="#contact">Contact Us</a></li> 
+              <li class="scroll-to-section"><a href="#inquiry" class="active">inquiry</a></li>
+
               <li class="scroll-to-section"><div class="main-blue-button"><a href="#contact">Get Your Quote</a></div></li> 
             </ul>        
             <a class='menu-trigger'>
@@ -308,7 +310,7 @@ https://templatemo.com/tm-563-seo-dream
         <div class="col-lg-6 offset-lg-3">
           <div class="section-heading wow bounceIn" data-wow-duration="1s" data-wow-delay="0.2s">
             <h6>Our Staff</h6>
-            <h2>Discover What We Do &amp; <span>Offer</span> To Our <em>Clients</em></h2>
+            <h2>Learn more about <span>our Staff!</span>  <em></em></h2>
           </div>
         </div>
       </div>
@@ -560,12 +562,7 @@ https://templatemo.com/tm-563-seo-dream
                 <div class="row">
                   <div class="col-lg-6">
                     <fieldset>
-                      <input type="name" name="name" id="name" placeholder="Name" autocomplete="on" required>
-                    </fieldset>
-                  </div>
-                  <div class="col-lg-6">
-                    <fieldset>
-                      <input type="surname" name="surname" id="surname" placeholder="Surname" autocomplete="on" required>
+                      <input type="name" name="name" id="name" placeholder="Full Name" autocomplete="on" required>
                     </fieldset>
                   </div>
                   <div class="col-lg-6">
@@ -575,7 +572,12 @@ https://templatemo.com/tm-563-seo-dream
                   </div>
                   <div class="col-lg-6">
                     <fieldset>
-                      <input type="subject" name="subject" id="subject" placeholder="Subject" autocomplete="on">
+                      <input type="age" name="age" id="age" placeholder="Child's age" autocomplete="on" required>
+                    </fieldset>
+                  </div>
+                  <div class="col-lg-6">
+                    <fieldset>
+                      <input type="text" name="allergies" id="allergies" placeholder="Allergies if Any" required="">
                     </fieldset>
                   </div>
                   <div class="col-lg-12">
@@ -615,6 +617,79 @@ https://templatemo.com/tm-563-seo-dream
                   </ul>
                 </div>
               </div>
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div id="inquiry" class="inquiry section">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-12 wow fadeInUp" data-wow-duration="0.5s" data-wow-delay="0.25s">
+          
+          <form id="contact" action="" method="post">
+            <div class="row">
+              <div class="col-lg-6 offset-lg-3">
+                <div class="section-heading">
+                  <h6>inquiries</h6>
+                  <h2>Have a question? let <span>us</span> know! <em></em> </h2>
+                </div>
+              </div>
+              <div class="col-lg-12">
+                <div class="row">
+                  <div class="col-lg-6">
+                    <fieldset>
+                      <input type="name" name="name" id="name" placeholder="Full Name" autocomplete="on" required>
+                    </fieldset>
+                  </div>
+                  <div class="col-lg-6">
+                    <fieldset>
+                      <input type="text" name="email" id="email" pattern="[^ @]*@[^ @]*" placeholder="Your Email" required="">
+                    </fieldset>
+                  </div>
+                  <div class="col-lg-12">
+                    <fieldset>
+                      <textarea name="message" type="text" class="form-control" id="message" placeholder="Message" required=""></textarea>  
+                    </fieldset>
+                  </div>
+                  <div class="col-lg-12">
+                    <fieldset>
+                      <button type="submit" id="form-submit" class="main-button ">Send Message Now</button>
+                    </fieldset>
+                  </div>
+                </div>
+              </div>
+              
+               <!--
+              <div class="col-lg-3">
+                <div class="contact-info">
+                  <ul>
+                    <li>
+                      <div class="icon">
+                        <img src="assets/images/contact-icon-01.png" alt="email icon">
+                      </div>
+                      <a href="#">info@company.com</a>
+                    </li>
+                    <li>
+                      <div class="icon">
+                        <img src="assets/images/contact-icon-02.png" alt="phone">
+                      </div>
+                      <a href="#">845-257-2910</a>
+                    </li>
+                    <li>
+                      <div class="icon">
+                        <img src="assets/images/contact-icon-03.png" alt="location">
+                      </div>
+                      <a href="#">1 Hawk Drive 
+                        New Paltz, NY 12561 </a>
+                    </li>
+                  </ul>
+                </div>
+              </div> 
+              !-->
+
             </div>
           </form>
         </div>
