--- a/client/v2/index.html
+++ b/client/v2/index.html
@@ -66,7 +66,8 @@ https://templatemo.com/tm-563-seo-dream
               <li class="scroll-to-section"><a href="#services">Staff</a></li>
               <li class="scroll-to-section"><a href="#portfolio">Portfolio</a></li>
               <li class="scroll-to-section"><a href="#contact">Contact Us</a></li> 
-              <li class="scroll-to-section"><div class="main-blue-button"><a href="#contact">Get Your Quote</a></div></li> 
+              <li class="scroll-to-section"><a href="#Register">Register</a></li>
+              <li class="scroll-to-section"><div class="main-blue-button"><a href="#Login">Login</a></div></li> 
             </ul>        
             <a class='menu-trigger'>
                 <span>Menu</span>
@@ -87,6 +88,9 @@ https://templatemo.com/tm-563-seo-dream
             <div class="col-lg-6 align-self-center">
               <div class="left-content header-text wow fadeInLeft" data-wow-duration="1s" data-wow-delay="1s">
                 <div class="row">
+                  <div class="col-lg-12">
+                    <h2>SUNY NEW PALTZ &amp; CHILDERN'S CENTER</h2>
+                  </div>
                   <div class="col-lg-4 col-sm-4">
                     <div class="info-stat">
                       <h6>HOURS OF OPERATION:</h6>
@@ -101,16 +105,10 @@ https://templatemo.com/tm-563-seo-dream
                   </div>
                   <div class="col-lg-4 col-sm-4">
                     <div class="info-stat">
-                      <h6>Schedules</h6>
-                      <h4>$450/Meeting</h4>
-                    </div>
-                  </div>
-                  <div class="col-lg-12">
-                    <h2>SUNY NEW PALTZ &amp; CHILDERN'S CENTER</h2>
-                  </div>
-                  <div class="col-lg-12">
-                    <div class="main-green-button scroll-to-section">
-                      <a href="#contact">Sign Up today</a>
+                      <h6>Address and Phone Number</h6>
+                      <h4>1 Hawk Drive
+                        New Paltz, NY 12561
+                        845-257-2910</h4>
                     </div>
                   </div>
                 </div>
@@ -432,8 +430,8 @@ https://templatemo.com/tm-563-seo-dream
       <div class="row">
         <div class="col-lg-5">
           <div class="section-heading wow fadeInLeft" data-wow-duration="1s" data-wow-delay="0.3s">
-            <h6>Testimonials</h6>
-            <h2>What parents have to  <em> say </em> about <span>us!</span></h2>
+            <h6>Our Portofolio</h6>
+            <h2>Discover Our Recent <em>Projects</em> And <span>Showcases</span></h2>
           </div>
         </div>
       </div>
@@ -448,8 +446,8 @@ https://templatemo.com/tm-563-seo-dream
                   <img src="assets/images/portfolio-01.jpg" alt="">
                   <div class="hover-content">
                     <div class="inner-content">
-                      <a href="#"><h4>ex:</h4></a>
-                      <span>"Great environment for my 3yr old"</span>
+                      <a href="#"><h4>Awesome Project 101</h4></a>
+                      <span>Marketing</span>
                     </div>
                   </div>
                 </div>
@@ -459,8 +457,8 @@ https://templatemo.com/tm-563-seo-dream
                   <img src="assets/images/portfolio-04.jpg" alt="">
                   <div class="hover-content">
                     <div class="inner-content">
-                      <a href="#"><h4>ex:</h4></a>
-                      <span>"convenient"</span>
+                      <a href="#"><h4>Awesome Project 102</h4></a>
+                      <span>Branding</span>
                     </div>
                   </div>
                 </div>
@@ -472,8 +470,8 @@ https://templatemo.com/tm-563-seo-dream
                   <img src="assets/images/portfolio-02.jpg" alt="">
                   <div class="hover-content">
                     <div class="inner-content">
-                      <a href="#"><h4>ex:</h4></a>
-                      <span>"We are so thankful to be part of this center"</span>
+                      <a href="#"><h4>Awesome Project 103</h4></a>
+                      <span>Consulting</span>
                     </div>
                   </div>
                 </div>
@@ -483,8 +481,8 @@ https://templatemo.com/tm-563-seo-dream
                   <img src="assets/images/portfolio-05.jpg" alt="">
                   <div class="hover-content">
                     <div class="inner-content">
-                      <a href="#"><h4>ex:</h4></a>
-                      <span>The staff is very nice and caring!</span>
+                      <a href="#"><h4>Awesome Project 104</h4></a>
+                      <span>Artwork</span>
                     </div>
                   </div>
                 </div>
@@ -496,8 +494,8 @@ https://templatemo.com/tm-563-seo-dream
                   <img src="assets/images/portfolio-03.jpg" alt="">
                   <div class="hover-content">
                     <div class="inner-content">
-                      <a href="#"><h4>ex:</h4></a>
-                      <span>A very safe and supporting place for my child</span>
+                      <a href="#"><h4>Awesome Project 105</h4></a>
+                      <span>Branding</span>
                     </div>
                   </div>
                 </div>
@@ -507,8 +505,8 @@ https://templatemo.com/tm-563-seo-dream
                   <img src="assets/images/portfolio-06.jpg" alt="">
                   <div class="hover-content">
                     <div class="inner-content">
-                      <a href="#"><h4>ex:</h4></a>
-                      <span></span>
+                      <a href="#"><h4>Awesome Project 106</h4></a>
+                      <span>Artwork</span>
                     </div>
                   </div>
                 </div>
@@ -520,8 +518,8 @@ https://templatemo.com/tm-563-seo-dream
                   <img src="assets/images/portfolio-04.jpg" alt="">
                   <div class="hover-content">
                     <div class="inner-content">
-                      <a href="#"><h4>ex:</h4></a>
-                      <span></span>
+                      <a href="#"><h4>Awesome Project 107</h4></a>
+                      <span>Creative</span>
                     </div>
                   </div>
                 </div>
@@ -531,8 +529,8 @@ https://templatemo.com/tm-563-seo-dream
                   <img src="assets/images/portfolio-01.jpg" alt="">
                   <div class="hover-content">
                     <div class="inner-content">
-                      <a href="#"><h4>ex:</h4></a>
-                      <span></span>
+                      <a href="#"><h4>Awesome Project 108</h4></a>
+                      <span>Consulting</span>
                     </div>
                   </div>
                 </div>
@@ -621,7 +619,98 @@ https://templatemo.com/tm-563-seo-dream
       </div>
     </div>
   </div>
-
+  <!-- ***** Register in starts ***** -->
+  <div id="Register" class="contact-us section">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-12 wow fadeInUp" data-wow-duration="0.5s" data-wow-delay="0.25s">
+          <form id="contact" action="" method="post">
+            <div class="row">
+              <div class="col-lg-6 offset-lg-3">
+                <div class="section-heading">
+                  <h6></h6>
+                  <h2>Register</h2>
+                </div>
+              </div>
+              <div class="field">
+                <p class="control has-icons-left has-icons-right">
+                  <input class="input" type="email" placeholder="Email">
+                  <span class="icon is-small is-left">
+                    <i class="fas fa-envelope"></i>
+                  </span>
+                  <span class="icon is-small is-right">
+                    <i class="fas fa-check"></i>
+                  </span>
+                </p>
+              </div>
+              
+              <div class="field">
+                <p class="control has-icons-left">
+                  <input class="input" type="password" placeholder="Password">
+                  <span class="icon is-small is-left">
+                    <i class="fas fa-lock"></i>
+                  </span>
+                </p>
+              </div>
+              <div class="field">
+                <p class="control">
+                  <button class="button is-success">
+                    Register
+                  </button>
+                </p>
+              </div>
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- ***** Register in ends ***** -->
+  <!-- ***** Login in starts ***** -->
+  <div id="Login" class="contact-us section">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-12 wow fadeInUp" data-wow-duration="0.5s" data-wow-delay="0.25s">
+          <form id="contact" action="" method="post">
+            <div class="col-lg-12 wow fadeInUp" data-wow-duration="0.5s" data-wow-delay="0.25s">
+              <form id="contact" action="" method="post">
+                <div class="row">
+                  <div class="col-lg-6 offset-lg-3">
+                    <div class="section-heading">
+                      <h6></h6>
+                      <h2>Login</h2>
+                    </div>
+                  </div>
+                  <div class="col-lg-9">
+                    <div class="row">
+                      <div class="col-lg-6">
+                        <h4>Email</h4>
+                        <fieldset>
+                          <input type="text" name="email" id="email" pattern="[^ @]*@[^ @]*" placeholder="Your Email" required="">
+                        </fieldset>
+                      </div>
+                      <div class="col-lg-6">
+                        <h4>Password</h4>
+                        <fieldset>
+                          <input type="password" name="password" id="password" placeholder="password" autocomplete="off">
+                        </fieldset>
+                      </div>
+                      <div class="col-lg-12">
+                        <fieldset>
+                          <button type="submit" id="form-submit" class="main-button ">login</button>
+                        </fieldset>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </form>
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- ***** Login in ends ***** -->
   <footer>
     <div class="container">
       <div class="row">
