--- a/client/v2/index.html
+++ b/client/v2/index.html
@@ -66,8 +66,7 @@ https://templatemo.com/tm-563-seo-dream
               <li class="scroll-to-section"><a href="#services">Staff</a></li>
               <li class="scroll-to-section"><a href="#portfolio">Gallery</a></li>
               <li class="scroll-to-section"><a href="#contact">Contact Us</a></li> 
-              <li class="scroll-to-section"><a href="#inquiry" class="active">inquiry</a></li>
-              <li class="scroll-to-section"><div class="main-blue-button"><a href="#contact">Get Your Quote</a></div></li> 
+              <li class="scroll-to-section"><a href="#inquiry" class="active">inquiry</a></li> 
               <li class="scroll-to-section"><a href="#Register">Register</a></li>
               <li class="scroll-to-section"><div class="main-blue-button"><a href="#Login">Login</a></div></li> 
 
@@ -110,7 +109,7 @@ https://templatemo.com/tm-563-seo-dream
                     <div class="info-stat">
                       <h6>Address and Phone Number</h6>
                       <h4>1 Hawk Drive
-                        New Paltz, NY 12561
+                        New Paltz, NY 12561 <br>
                         845-257-2910</h4>
                     </div>
                   </div>
