--- a/client/v2/index.html
+++ b/client/v2/index.html
@@ -696,46 +696,53 @@ https://templatemo.com/tm-563-seo-dream
                 </div>
               </div> 
               !-->
-
-
-                  <h6></h6>
-                  <h2>Register</h2>
-                </div>
-              </div>
-              <div class="field">
-                <p class="control has-icons-left has-icons-right">
-                  <input class="input" type="email" placeholder="Email">
-                  <span class="icon is-small is-left">
-                    <i class="fas fa-envelope"></i>
-                  </span>
-                  <span class="icon is-small is-right">
-                    <i class="fas fa-check"></i>
-                  </span>
-                </p>
-              </div>
-              
-              <div class="field">
-                <p class="control has-icons-left">
-                  <input class="input" type="password" placeholder="Password">
-                  <span class="icon is-small is-left">
-                    <i class="fas fa-lock"></i>
-                  </span>
-                </p>
-              </div>
-              <div class="field">
-                <p class="control">
-                  <button class="button is-success">
-                    Register
-                  </button>
-                </p>
+<!-- ***** Register in starts ***** -->
+<div id="Register" class="contact-us section">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-12 wow fadeInUp" data-wow-duration="0.5s" data-wow-delay="0.25s">
+        <form id="contact" action="" method="post">
+          <div class="row">
+            <div class="col-lg-6 offset-lg-3">
+              <div class="section-heading">
+                <h6></h6>
+                <h2>Register</h2>
               </div>
             </div>
-          </form>
-        </div>
+            <div class="field">
+              <p class="control has-icons-left has-icons-right">
+                <input class="input" type="email" placeholder="Email">
+                <span class="icon is-small is-left">
+                  <i class="fas fa-envelope"></i>
+                </span>
+                <span class="icon is-small is-right">
+                  <i class="fas fa-check"></i>
+                </span>
+              </p>
+            </div>
+            
+            <div class="field">
+              <p class="control has-icons-left">
+                <input class="input" type="password" placeholder="Password">
+                <span class="icon is-small is-left">
+                  <i class="fas fa-lock"></i>
+                </span>
+              </p>
+            </div>
+            <div class="field">
+              <p class="control">
+                <button class="button is-success">
+                  Register
+                </button>
+              </p>
+            </div>
+          </div>
+        </form>
       </div>
     </div>
   </div>
-  <!-- ***** Register in ends ***** -->
+</div>
+<!-- ***** Register in ends ***** -->
   <!-- ***** Login in starts ***** -->
   <div id="Login" class="contact-us section">
     <div class="container">
