index gallery name change

--- a/client/v2/index.html
+++ b/client/v2/index.html
@@ -97,7 +97,7 @@ https://templatemo.com/tm-563-seo-dream
                   <div class="col-lg-4 col-sm-4">
                     <div class="info-stat">
                       <h6>HOURS OF OPERATION:</h6>
-                      <h4>Monday through Friday, 7:30 a.m. - 5 p.m.</h4>
+                      <h4>Monday-Friday, 7:30 a.m. - 5 p.m.</h4>
                     </div>
                   </div>
                   <div class="col-lg-4 col-sm-4">
@@ -297,7 +297,6 @@ https://templatemo.com/tm-563-seo-dream
             </div>
           </div>
           <p><a rel="nofollow" href="https://templatemo.com/tm-563-seo-dream" target="_parent">The Children's Center</a> is a licensed, non-profit corporation. In addition to tuition, the center is partially funded by SUNY grants and by the Student Association of SUNY New Paltz. The facility, plus maintenance and utilities, is provided by the College free of charge. We appreciate the upkeep and maintenance the College provides. Our primary purpose is to provide quality care for children of students attending classes at SUNY New Paltz.</p>
-          <div class="main-green-button"><a href="#">Discover company</a></div>
         </div>
       </div>
     </div>
@@ -314,6 +313,7 @@ https://templatemo.com/tm-563-seo-dream
         </div>
       </div>
     </div>
+
     <div class="container-fluid">
       <div class="row">
         <div class="col-lg-4">
@@ -426,6 +426,7 @@ https://templatemo.com/tm-563-seo-dream
         </div>
       </div>
     </div>
+
   </div>
 
   <div id="portfolio" class="our-portfolio section">
@@ -433,8 +434,8 @@ https://templatemo.com/tm-563-seo-dream
       <div class="row">
         <div class="col-lg-5">
           <div class="section-heading wow fadeInLeft" data-wow-duration="1s" data-wow-delay="0.3s">
-            <h6>Our Portofolio</h6>
-            <h2>Discover Our Recent <em>Projects</em> And <span>Showcases</span></h2>
+            <h6>Testimonials</h6>
+            <h2>here are somethings parents have to say about  <em>us!</em>  <span></span></h2>
           </div>
         </div>
       </div>
@@ -449,8 +450,8 @@ https://templatemo.com/tm-563-seo-dream
                   <img src="assets/images/portfolio-01.jpg" alt="">
                   <div class="hover-content">
                     <div class="inner-content">
-                      <a href="#"><h4>Awesome Project 101</h4></a>
-                      <span>Marketing</span>
+                      <a href="#"><h4>ex:</h4></a>
+                      <span>"Love the staff"</span>
                     </div>
                   </div>
                 </div>
@@ -460,8 +461,8 @@ https://templatemo.com/tm-563-seo-dream
                   <img src="assets/images/portfolio-04.jpg" alt="">
                   <div class="hover-content">
                     <div class="inner-content">
-                      <a href="#"><h4>Awesome Project 102</h4></a>
-                      <span>Branding</span>
+                      <a href="#"><h4>ex:</h4></a>
+                      <span>"very safe place"</span>
                     </div>
                   </div>
                 </div>
@@ -473,8 +474,8 @@ https://templatemo.com/tm-563-seo-dream
                   <img src="assets/images/portfolio-02.jpg" alt="">
                   <div class="hover-content">
                     <div class="inner-content">
-                      <a href="#"><h4>Awesome Project 103</h4></a>
-                      <span>Consulting</span>
+                      <a href="#"><h4>ex:</h4></a>
+                      <span>""</span>
                     </div>
                   </div>
                 </div>
@@ -484,8 +485,8 @@ https://templatemo.com/tm-563-seo-dream
                   <img src="assets/images/portfolio-05.jpg" alt="">
                   <div class="hover-content">
                     <div class="inner-content">
-                      <a href="#"><h4>Awesome Project 104</h4></a>
-                      <span>Artwork</span>
+                      <a href="#"><h4>ex:</h4></a>
+                      <span>""</span>
                     </div>
                   </div>
                 </div>
@@ -497,8 +498,8 @@ https://templatemo.com/tm-563-seo-dream
                   <img src="assets/images/portfolio-03.jpg" alt="">
                   <div class="hover-content">
                     <div class="inner-content">
-                      <a href="#"><h4>Awesome Project 105</h4></a>
-                      <span>Branding</span>
+                      <a href="#"><h4>ex:</h4></a>
+                      <span>""</span>
                     </div>
                   </div>
                 </div>
@@ -508,8 +509,8 @@ https://templatemo.com/tm-563-seo-dream
                   <img src="assets/images/portfolio-06.jpg" alt="">
                   <div class="hover-content">
                     <div class="inner-content">
-                      <a href="#"><h4>Awesome Project 106</h4></a>
-                      <span>Artwork</span>
+                      <a href="#"><h4>ex:</h4></a>
+                      <span>""</span>
                     </div>
                   </div>
                 </div>
@@ -521,8 +522,8 @@ https://templatemo.com/tm-563-seo-dream
                   <img src="assets/images/portfolio-04.jpg" alt="">
                   <div class="hover-content">
                     <div class="inner-content">
-                      <a href="#"><h4>Awesome Project 107</h4></a>
-                      <span>Creative</span>
+                      <a href="#"><h4>ex:</h4></a>
+                      <span>""</span>
                     </div>
                   </div>
                 </div>
@@ -532,8 +533,8 @@ https://templatemo.com/tm-563-seo-dream
                   <img src="assets/images/portfolio-01.jpg" alt="">
                   <div class="hover-content">
                     <div class="inner-content">
-                      <a href="#"><h4>Awesome Project 108</h4></a>
-                      <span>Consulting</span>
+                      <a href="#"><h4>ex:</h4></a>
+                      <span>""</span>
                     </div>
                   </div>
                 </div>
