--- a/client/v0/contact.html
+++ b/client/v0/contact.html
@@ -13,7 +13,7 @@
 
     <div class="contact">
         <!-- <form action="insert.php" method="post"> -->
-        <form>
+        <form id="contact" action="inquiry.php" method="post">
             <p>
                 <label for="firstName">First name:</label>
                 <input type="text" name="first_name" id="fname">
