--- a/client/v2/index.html
+++ b/client/v2/index.html
@@ -621,6 +621,80 @@ https://templatemo.com/tm-563-seo-dream
       </div>
     </div>
   </div>
+<!-- ***** inquiry form starts ***** -->
+  <div id="inquiry" class="inquiry section">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-12 wow fadeInUp" data-wow-duration="0.5s" data-wow-delay="0.25s">
+          
+          <form id="contact" action="" method="post">
+            <div class="row">
+              <div class="col-lg-6 offset-lg-3">
+                <div class="section-heading">
+                  <h6>inquiries</h6>
+                  <h2>Have a question? let <span>us</span> know! <em></em> </h2>
+                </div>
+              </div>
+              <div class="col-lg-12">
+                <div class="row">
+                  <div class="col-lg-6">
+                    <fieldset>
+                      <input type="name" name="name" id="name" placeholder="Full Name" autocomplete="on" required>
+                    </fieldset>
+                  </div>
+                  <div class="col-lg-6">
+                    <fieldset>
+                      <input type="text" name="email" id="email" pattern="[^ @]*@[^ @]*" placeholder="Your Email" required="">
+                    </fieldset>
+                  </div>
+                  <div class="col-lg-12">
+                    <fieldset>
+                      <textarea name="message" type="text" class="form-control" id="message" placeholder="Message" required=""></textarea>  
+                    </fieldset>
+                  </div>
+                  <div class="col-lg-12">
+                    <fieldset>
+                      <button type="submit" id="form-submit" class="main-button ">Send Message Now</button>
+                    </fieldset>
+                  </div>
+                </div>
+              </div>
+              
+               <!--
+              <div class="col-lg-3">
+                <div class="contact-info">
+                  <ul>
+                    <li>
+                      <div class="icon">
+                        <img src="assets/images/contact-icon-01.png" alt="email icon">
+                      </div>
+                      <a href="#">info@company.com</a>
+                    </li>
+                    <li>
+                      <div class="icon">
+                        <img src="assets/images/contact-icon-02.png" alt="phone">
+                      </div>
+                      <a href="#">845-257-2910</a>
+                    </li>
+                    <li>
+                      <div class="icon">
+                        <img src="assets/images/contact-icon-03.png" alt="location">
+                      </div>
+                      <a href="#">1 Hawk Drive 
+                        New Paltz, NY 12561 </a>
+                    </li>
+                  </ul>
+                </div>
+              </div> 
+              !-->
+
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
+<!-- ***** inquiry form ends ***** -->
     <!-- ***** Register in starts ***** -->
     <div id="Register" class="contact-us section">
       <div class="container">
