--- a/client/v2/index.html
+++ b/client/v2/index.html
@@ -96,7 +96,7 @@ https://templatemo.com/tm-563-seo-dream
                   <div class="col-lg-4 col-sm-4">
                     <div class="info-stat">
                       <h6>HOURS OF OPERATION:</h6>
-                      <h4>Monday through Friday, 7:30 a.m. - 5 p.m.</h4>
+                      <h4>Monday - Friday, 7:30 a.m. - 5 p.m.</h4>
                     </div>
                   </div>
                   <div class="col-lg-4 col-sm-4">
@@ -126,7 +126,7 @@ https://templatemo.com/tm-563-seo-dream
       </div>
     </div>
   </div>
-
+<!-- ***** 
   <div id="features" class="features section">
     <div class="container">
       <div class="row">
@@ -261,7 +261,7 @@ https://templatemo.com/tm-563-seo-dream
       </div>
     </div>
   </div>
-
+-->
   <div id="about" class="about-us section">
     <div class="container">
       <div class="row">
@@ -275,7 +275,7 @@ https://templatemo.com/tm-563-seo-dream
             <h6>About Us</h6>
             <h2>A little about us!</h2>
           </div>
-          <div class="row">
+  <!--       <div class="row">
             <div class="col-lg-4 col-sm-4">
               <div class="about-item">
                 <h4>750+</h4>
@@ -294,13 +294,14 @@ https://templatemo.com/tm-563-seo-dream
                 <h6>awards</h6>
               </div>
             </div>
-          </div>
+          </div>--> 
           <p><a rel="nofollow" href="https://templatemo.com/tm-563-seo-dream" target="_parent">The Children's Center</a> is a licensed, non-profit corporation. In addition to tuition, the center is partially funded by SUNY grants and by the Student Association of SUNY New Paltz. The facility, plus maintenance and utilities, is provided by the College free of charge. We appreciate the upkeep and maintenance the College provides. Our primary purpose is to provide quality care for children of students attending classes at SUNY New Paltz.</p>
-          <div class="main-green-button"><a href="#">Discover company</a></div>
+<!--          <div class="main-green-button"><a href="#">Discover company</a></div>-->
         </div>
       </div>
     </div>
   </div>
+
 
   <div id="services" class="our-services section">
     <div class="container">
