--- a/client/v2/index.html
+++ b/client/v2/index.html
@@ -65,6 +65,7 @@ https://templatemo.com/tm-563-seo-dream
               <li class="scroll-to-section"><a href="#about">About Us</a></li>
               <li class="scroll-to-section"><a href="#services">Staff</a></li>
               <li class="scroll-to-section"><a href="#portfolio">Gallery</a></li>
+              <li class="scroll-to-section"><a href="#Calendar">Calendar</a></li>
               <li class="scroll-to-section"><a href="#contact">Contact Us</a></li> 
               <li class="scroll-to-section"><a href="#inquiry" class="active">inquiry</a></li> 
               <li class="scroll-to-section"><a href="#Register">Register</a></li>
@@ -544,6 +545,29 @@ https://templatemo.com/tm-563-seo-dream
       </div>
     </div>
   </div>
+  <!-- ***** Start of Calander ***** -->
+  <div id="Calendar" class="Calendar">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-12 wow fadeInUp" data-wow-duration="0.5s" data-wow-delay="0.25s">
+          <form id="contact" action="" method="post">
+            <div class="row">
+              <div class="section-heading">
+                <h6>Calendar</h6>
+                <h2>Check out our <em>Calendar</em> and <span>Events</span></h2>
+                <body>
+                  <center>
+                      <iframe src="https://calendar.google.com/calendar/embed?src=eloonku%40gmail.com&ctz=America%2FNew_York" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
+                  </center>
+              </body>
+              </div>
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- ***** End of Calendar ***** -->
 
   <div id="contact" class="contact-us section">
     <div class="container">
