--- a/client/v0/info.html
+++ b/client/v0/info.html
@@ -63,7 +63,7 @@
         <h3>CHILD/STAFF RATIO</h3>
         <p> It is our firm policy to keep the groups small in order to give the necessary attention.</p>
 
-        <table style="width:35%">
+        <table style="width:35%"> <center>
             <tr>
                 <th>Age Group</th>
                 <th>Ratio (children to staff)</th>
