Stable, updated version of v4

--- a/client/v4/admin/signup.html
+++ b/client/v4/admin/signup.html
@@ -18,7 +18,7 @@
 
         <!--------------------- Form start  --------------------->
 
-        <form action="create-account.php" method="post" class="w-full max-w-lg" id="signup" novalidate>
+        <form action="process-signup.php" method="post" class="w-full max-w-lg" id="signup" novalidate>
 
             <!--------------------- First and last name start  --------------------->
 
