--- a/client/v4/admin/signup.html
+++ b/client/v4/admin/signup.html
@@ -18,7 +18,7 @@
 
         <!--------------------- Form start  --------------------->
 
-        <form action="process-signup.php" method="post" class="w-full max-w-lg" id="signup" novalidate>
+        <form action="signup-process.php" method="post" class="w-full max-w-lg" id="signup" novalidate>
 
             <!--------------------- First and last name start  --------------------->
 
@@ -126,7 +126,9 @@
 
             <div class="flex flex-col items-center justify-center">
                 <button
-                    class="text-sky-400 text-lg py-1.5 my-3 w-1/2 bg-transparent border-2 border-sky-300 rounded-full transition ease-in-out hover:scale-110 hover:bg-sky-400 hover:text-white active:bg-sky-300">
+                    class="text-sky-400 text-lg py-1.5 my-3 w-1/2 bg-transparent border-2 border-sky-300 
+                    rounded-full transition ease-in-out hover:scale-110 hover:bg-sky-400 hover:text-white 
+                    hover:border-sky-400 active:bg-sky-300">
                     Submit</button>
             </div>
 
